update css & content

--- a/index.html
+++ b/index.html
@@ -3,10 +3,98 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dafi Company</title>
+    <title>Dashboard Bricket indonesia</title>
 
     <!-- css external -->
     <link rel="stylesheet" href="css\style.css" />
   </head>
-  <body></body>
+
+  <body>
+    <!-- header content -->
+    <header class="main-header">
+      <!-- logo -->
+      <div class="main-logo"></div>
+      <!-- navigation -->
+      <nav>
+        <a href="#Home-section">Home</a>
+        <a href="#Our Profile-section">Our Profile</a>
+        <a href="#Portofolio-section">Portofolio</a>
+        <a href="#Massage-Us-section">Massage us</a>
+      </nav>
+    </header>
+
+    <hr />
+
+    <!-- main content -->
+    <main>
+      <!-- home section -->
+      <section id="Home-section">
+        <header>
+          <h1>Welcome To PT.D Bricket Indonesia</h1>
+        </header>
+
+        <!-- banner content -->
+        <div class="banner-img"></div>
+
+        <!-- banner text -->
+        <article>
+          <p>
+            bricket adalah energi yang dapat diperbarui dengan dampak positif
+            yang lebih banyak
+          </p>
+        </article>
+      </section>
+
+      <hr />
+
+      <!-- our profile section -->
+      <section id="Our Profile-section">
+        <header>
+          <h2>Our Profile</h2>
+        </header>
+
+        <!-- Our Profile text -->
+        <article>
+          <p>
+            bricket adalah energi yang dapat diperbarui dengan dampak positif
+            yang lebih banyak
+          </p>
+        </article>
+      </section>
+
+      <hr />
+
+      <!-- portofolio section -->
+      <section id="Portofolio-section">
+        <header>
+          <h2>Portofolio</h2>
+        </header>
+
+        <!-- Portofolio text -->
+        <article>
+          <p>
+            bricket adalah energi yang dapat diperbarui dengan dampak positif
+            yang lebih banyak
+          </p>
+        </article>
+      </section>
+
+      <hr />
+
+      <!-- massage us section -->
+      <section id="Massage-Us-section">
+        <header>
+          <h2>Message Us</h2>
+        </header>
+        <!-- Massage Us form -->
+        <form action=""></form>
+      </section>
+    </main>
+    <hr />
+
+    <!-- footer content -->
+    <footer>
+      <span> Made By Dafi@2025</span>
+    </footer>
+  </body>
 </html>
