update html dan css

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <!-- navigation -->
       <nav>
         <a href="#Home-section">Home</a>
-        <a href="#Our Profile-section">Our Profile</a>
+        <a href="#Profile-section">Profile</a>
         <a href="#Portofolio-section">Portofolio</a>
         <a href="#Massage-Us-section">Massage us</a>
       </nav>
@@ -28,38 +28,89 @@
     <!-- main content -->
     <main>
       <!-- home section -->
-      <section id="Home-section">
+      <section.ion id="Home-section">
         <header>
-          <h1>Welcome To PT.D Bricket Indonesia</h1>
+          <h1>Selamat Datang di PT.D Bricket Indonesia</h1>
         </header>
 
         <!-- banner content -->
         <div class="banner-img"></div>
 
         <!-- banner text -->
-        <article>
-          <p>
-            bricket adalah energi yang dapat diperbarui dengan dampak positif
-            yang lebih banyak
-          </p>
-        </article>
-      </section>
+        <h1>PT.D Bricket Indonesia</h1>
+        <p class="intro">
+          perusahaan yang bergerak di bidang energi terbarukan, khususnya dalam
+          produksi dan distribusi briket arang berkualitas tinggi. Kami
+          berkomitmen untuk menyediakan solusi energi yang ramah lingkungan,
+          efisien, dan ekonomis, guna mendukung kebutuhan rumah tangga,
+          industri, serta sektor komersial. Briket yang kami hasilkan berasal
+          dari bahan-bahan alami seperti tempurung kelapa dan limbah biomassa
+          lainnya, menjadikannya sumber energi yang berkelanjutan dan memiliki
+          emisi karbon yang jauh lebih rendah dibandingkan bahan bakar fosil.
+          Dengan teknologi modern dan kontrol kualitas yang ketat, kami
+          memastikan setiap produk yang kami hasilkan memenuhi standar nasional
+          dan internasional.
+        </p>
+      </section.ion>
 
       <hr />
 
-      <!-- our profile section -->
-      <section id="Our Profile-section">
+      <!-- profile section -->
+      <section id=" Profile-section">
         <header>
-          <h2>Our Profile</h2>
+          <h2>Profile</h2>
         </header>
 
         <!-- Our Profile text -->
-        <article>
+        <div class="profile-text">
+          <h3>Siapa Kami?</h3>
           <p>
-            bricket adalah energi yang dapat diperbarui dengan dampak positif
-            yang lebih banyak
+            PT.D Bricket Indonesia didirikan dengan visi untuk menjadi pemimpin
+            dalam pengembangan energi alternatif yang berkelanjutan. Kami
+            percaya bahwa energi masa depan harus ramah lingkungan, ekonomis,
+            dan mudah diakses oleh semua kalangan.
           </p>
-        </article>
+          <h3>Komitmen Kami</h3>
+          <p>
+            Kami berkomitmen terhadap praktik produksi yang bertanggung jawab
+            dan penggunaan bahan baku alami seperti tempurung kelapa, yang tidak
+            hanya efisien namun juga membantu mengurangi limbah pertanian.
+            Produk kami telah digunakan secara luas oleh rumah tangga, restoran,
+            hingga ekspor ke pasar internasional.
+          </p>
+          <h3>Kenapa Memilih Kami?</h3>
+          <ul>
+            <li>100% bahan alami & ramah lingkungan</li>
+            <li>Proses produksi bersih dan berkelanjutan</li>
+            <li>Standar kualitas tinggi dan konsisten</li>
+            <li>Dukungan teknis dan layanan pelanggan yang responsif</li>
+          </ul>
+          <h3>Visi Kami</h3>
+          <p>
+            Visi Kami Menjadi pelopor dalam pengembangan energi terbarukan di
+            Indonesia dan mendorong masyarakat untuk beralih ke sumber energi
+            yang lebih bersih dan berkelanjutan.
+          </p>
+          <h3>Misi Kami</h3>
+          <ul>
+            <li>
+              Meningkatkan kesadaran masyarakat akan pentingnya energi ramah
+              lingkungan.
+            </li>
+            <li>
+              Menghasilkan produk briket berkualitas tinggi dengan harga yang
+              kompetitif.
+            </li>
+            <li>
+              Memberikan pelayanan terbaik kepada pelanggan lokal maupun
+              internasional.
+            </li>
+            <li>
+              Mendukung program pemerintah dalam pengurangan emisi karbon dan
+              pemanfaatan limbah organik.
+            </li>
+          </ul>
+        </div>
       </section>
 
       <hr />
