--- a/index.html
+++ b/index.html
@@ -3,55 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dashboard Bricket indonesia</title>
+    <title>Dashboard Bricket Indonesia</title>
 
-    <!-- css external -->
-    <link rel="stylesheet" href="css\style.css" />
+    <!-- CSS External -->
+    <link rel="stylesheet" href="css/style.css" />
   </head>
+
   <body>
-    <style>
-      * {
-        box-sizing: border-box;
-        margin: 0;
-        padding: 0;
-      }
-
-      body {
-        font-family: sans-serif;
-        line-height: 1.6;
-        background: #f5f5f5;
-        padding: 20px;
-      }
-
-      .container {
-        display: flex;
-        flex-wrap: wrap;
-        gap: 20px;
-        justify-content: center;
-        max-width: 1200px;
-        margin: auto;
-      }
-
-      .card {
-        background: white;
-        padding: 20px;
-        border-radius: 10px;
-        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        flex: 1 1 300px; /* Min width 300px, grows if space */
-        max-width: 400px;
-      }
-
-      @media (max-width: 1200px) {
-        .card {
-          flex: 1 1 100%; /* Full width on small screens */
-        }
-      }
-    </style>
-    <!-- header content -->
+    <!-- Header Content -->
     <header class="main-header">
-      <!-- logo -->
       <div class="main-logo"></div>
-      <!-- navigation -->
       <nav>
         <a href="#Home-section">Home</a>
         <a href="#Profile-section">Profile</a>
@@ -62,45 +23,14 @@
 
     <hr />
 
-    <!-- main content -->
+    <!-- Main Content -->
     <main>
-      <!-- home section -->
-      <section.ion id="Home-section">
+      <!-- Home Section -->
+      <section id="Home-section">
         <header>
           <h1>Selamat Datang di PT.D Bricket Indonesia</h1>
         </header>
 
-        <!-- banner content -->
-        <style>
-          /* Reset margin dan padding */
-          * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-          }
-          /* Styling container slider */
-          .slider {
-            position: relative;
-            width: 100%;
-            max-width: 800px; /* Atur lebar maksimal sesuai kebutuhan */
-            height: 400px; /* Atur tinggi banner */
-            margin: 20px auto;
-            overflow: hidden;
-          }
-          /* Styling masing-masing slide */
-          .slide {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            transition: opacity 1s ease-in-out;
-            opacity: 0;
-          }
-          /* Slide yang aktif akan terlihat */
-          .slide.active {
-            opacity: 1;
-          }
-        </style>
-        <!-- Container slider -->
         <div class="slider">
           <img
             src="assets/banner.jpg.png"
@@ -112,73 +42,59 @@
         </div>
 
         <script>
-          // Ambil semua elemen slide
           const slides = document.querySelectorAll(".slide");
-          let currentSlide = 0; // slide awal
+          let currentSlide = 0;
 
-          // Fungsi untuk mengganti slide
           function nextSlide() {
-            // Hapus class 'active' dari slide saat ini
             slides[currentSlide].classList.remove("active");
-            // Hitung index slide berikutnya (siklus)
             currentSlide = (currentSlide + 1) % slides.length;
-            // Tambahkan class 'active' ke slide berikutnya
             slides[currentSlide].classList.add("active");
           }
 
-          // Pindah slide setiap 3 detik
           setInterval(nextSlide, 3000);
         </script>
 
-        <!-- banner text -->
         <h1>Tentang Kami!</h1>
         <p class="intro">
-          PT.D bricket berdiri sejak 17 juli 2010 PT.D bricket perusahaan yang
-          bergerak di bidang energi terbarukan, khususnya dalam produksi dan
-          distribusi briket arang berkualitas tinggi. Kami berkomitmen untuk
-          menyediakan solusi energi yang ramah lingkungan, efisien, dan
-          ekonomis, guna mendukung kebutuhan rumah tangga, industri, serta
-          sektor komersial. Briket yang kami hasilkan berasal dari bahan-bahan
-          alami seperti tempurung kelapa dan limbah biomassa lainnya,
-          menjadikannya sumber energi yang berkelanjutan dan memiliki emisi
-          karbon yang jauh lebih rendah dibandingkan bahan bakar fosil. Dengan
-          teknologi modern dan kontrol kualitas yang ketat, kami memastikan
-          setiap produk yang kami hasilkan memenuhi standar nasional dan
-          internasional.
+          PT.D Bricket berdiri sejak 17 Juli 2010. PT.D Bricket adalah
+          perusahaan yang bergerak di bidang energi terbarukan, khususnya dalam
+          produksi dan distribusi briket arang berkualitas tinggi. Kami
+          berkomitmen untuk menyediakan solusi energi yang ramah lingkungan,
+          efisien, dan ekonomis, guna mendukung kebutuhan rumah tangga,
+          industri, serta sektor komersial. Briket kami berasal dari bahan alami
+          seperti tempurung kelapa dan limbah biomassa lainnya, menjadikannya
+          sumber energi berkelanjutan dengan emisi karbon rendah. Kami
+          memastikan setiap produk memenuhi standar nasional dan internasional
+          dengan teknologi modern dan kontrol kualitas ketat.
         </p>
-      </section.ion>
+      </section>
 
       <hr />
 
-      <!-- profile section -->
+      <!-- Profile Section -->
       <section id="Profile-section">
         <header>
           <h2>Profile</h2>
         </header>
 
-        <!-- Our Profile text -->
         <div class="Profile-text">
           <h3>Siapa Kami?</h3>
-
           <p>
-            PT.D Bricket Indonesia didirikan dengan visi untuk menjadi pemimpin
-            dalam pengembangan energi alternatif yang berkelanjutan. Kami
-            percaya bahwa energi masa depan harus ramah lingkungan, ekonomis,
-            dan mudah diakses oleh semua kalangan.
+            PT.D Bricket Indonesia didirikan dengan visi menjadi pemimpin dalam
+            pengembangan energi alternatif yang berkelanjutan. Kami percaya
+            energi masa depan harus ramah lingkungan, ekonomis, dan mudah
+            diakses oleh semua.
           </p>
 
           <h3>Komitmen Kami</h3>
-
           <p>
-            Kami berkomitmen terhadap praktik produksi yang bertanggung jawab
-            dan penggunaan bahan baku alami seperti tempurung kelapa, yang tidak
-            hanya efisien namun juga membantu mengurangi limbah pertanian.
-            Produk kami telah digunakan secara luas oleh rumah tangga, restoran,
-            hingga ekspor ke pasar internasional.
+            Kami berkomitmen pada produksi yang bertanggung jawab dan
+            menggunakan bahan baku alami seperti tempurung kelapa. Produk kami
+            digunakan oleh rumah tangga, restoran, dan bahkan diekspor ke pasar
+            internasional.
           </p>
 
           <h3>Kenapa Memilih Kami?</h3>
-
           <ul>
             <li>100% bahan alami & ramah lingkungan</li>
             <li>Proses produksi bersih dan berkelanjutan</li>
@@ -187,31 +103,26 @@
           </ul>
 
           <h3>Visi Kami</h3>
-
           <p>
-            Visi Kami Menjadi pelopor dalam pengembangan energi terbarukan di
-            Indonesia dan mendorong masyarakat untuk beralih ke sumber energi
-            yang lebih bersih dan berkelanjutan.
+            Menjadi pelopor dalam pengembangan energi terbarukan di Indonesia
+            dan mendorong masyarakat beralih ke energi yang bersih dan
+            berkelanjutan.
           </p>
 
           <h3>Misi Kami</h3>
-
           <ul>
             <li>
-              Meningkatkan kesadaran masyarakat akan pentingnya energi ramah
-              lingkungan.
+              Meningkatkan kesadaran akan pentingnya energi ramah lingkungan.
             </li>
             <li>
-              Menghasilkan produk briket berkualitas tinggi dengan harga yang
-              kompetitif.
+              Memproduksi briket berkualitas tinggi dengan harga kompetitif.
             </li>
             <li>
-              Memberikan pelayanan terbaik kepada pelanggan lokal maupun
+              Memberikan pelayanan terbaik kepada pelanggan lokal dan
               internasional.
             </li>
             <li>
-              Mendukung program pemerintah dalam pengurangan emisi karbon dan
-              pemanfaatan limbah organik.
+              Mendukung pengurangan emisi karbon dan pemanfaatan limbah organik.
             </li>
           </ul>
         </div>
@@ -219,86 +130,90 @@
 
       <hr />
 
-      <!-- portofolio section -->
+      <!-- Portofolio Section -->
       <section id="Portofolio-section">
         <header>
           <h2>Portofolio</h2>
           <div class="kotak">
             <div class="item">
               <img src="./assets/amerika.jpg" alt="" />
-              <h2>amerika</h2>
+              <h2>Amerika</h2>
             </div>
             <div class="item">
               <img src="./assets/bandung.png" alt="" />
-              <h2>bandung</h2>
+              <h2>Bandung</h2>
             </div>
             <div class="item">
               <img src="./assets/jakarta.jpg" alt="" />
-              <h2>jakarta</h2>
+              <h2>Jakarta</h2>
+            </div>
+            <div class="item">
+              <img src="./assets/surabaya.jpg" alt="" />
+              <h2>Surabaya</h2>
             </div>
           </div>
         </header>
-
-        <!-- Portofolio text -->
-
         <p>
-          ini adalah beberapa kota dan negara yang PT.D Bricket support dari
-          awal berdiri hingga sampai saat ini
+          Ini adalah beberapa kota dan negara yang PT.D Bricket dukung sejak
+          awal berdiri hingga saat ini.
         </p>
       </section>
 
       <hr />
 
-      <!-- massage us section -->
+      <!-- Message Us Section -->
       <section id="Massage-Us-section">
         <header>
           <h2 id="temp-massage">Message Us</h2>
         </header>
-        <!-- Massage Us form -->
         <div style="display: flex; gap: 20px">
           <form id="form" name="contact-us" class="form-style">
             <div>
-              <label>nama</label>
+              <label>Nama</label>
               <input class="input-text" name="nama" type="text" />
             </div>
             <div>
-              <label>tanggal-lahir</label>
+              <label>Tanggal Lahir</label>
               <input class="input-text" name="tanggal-lahir" type="date" />
             </div>
             <div>
-              <label>jenis kelamin</label>
+              <label>Jenis Kelamin</label>
               <input
                 class="input-radio"
                 name="jenis-kelamin"
                 type="radio"
                 value="laki-laki"
-              />laki-laki
+              />
+              Laki-laki
               <input
                 class="input-radio"
                 name="jenis-kelamin"
                 type="radio"
                 value="perempuan"
-              />perempuan
+              />
+              Perempuan
             </div>
             <div>
-              <label>pesan</label>
-              <textarea name="pesan" id=""></textarea>
+              <label>Pesan</label>
+              <textarea name="pesan"></textarea>
             </div>
             <div>
-              <button>submit</button>
+              <button>Submit</button>
             </div>
           </form>
           <div id="hasil"></div>
         </div>
       </section>
     </main>
+
     <hr />
 
-    <!-- footer content -->
+    <!-- Footer Content -->
     <footer>
-      <span> Made By Dafi@2025</span>
+      <span>Made By Dafi@2025</span>
     </footer>
-    <!-- js external -->
+
+    <!-- JS External -->
     <script src="js/script.js"></script>
   </body>
 </html>
